Jann 30/objects/ITSES_Additional_Attachment__c.object
<CustomObject>
    <description>Created for seperate attachment section for all user can attach the document at any stage.</description>
    <fields>
        <fullName>Attachment_Type__c</fullName>
        <label>Attachment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Normal Attachment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Final Attachment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_SES_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IT-SES Request</label>
        <referenceTo>ITPR__c</referenceTo>
        <relationshipLabel>IT-SES Additional Attachments</relationshipLabel>
        <relationshipName>IT_SES_Additional_Attachments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>IT-SES Additional Attachment</label>
    <nameField>
        <displayFormat>AA-{0}</displayFormat>
        <label>Additional Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT-SES Additional Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>